# Telegram

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  commit.bat  commit.py  docker-compose.yml  finalize_commit.py  generate_session.py  pyproject.toml  render.yaml  requirements.txt  test.db  test_connections.py  test_lifespan.py  test_neon.py  vercel.json
app/: main.py
app/api/: router.py
app/core/: config.py  data_retention.py  env_loader.py  health_checks.py  logging.py  migrations.py  redis_client.py
app/db/: base.py  db_init.py  session.py
app/jobs/: scheduler.py  tasks.py  worker.py
app/models/: __init__.py  activity_event.py  consent.py  contact.py  conversation.py  conversation_memory.py  cross_group_identity.py  enums.py  external_lead.py  follow_up_job.py  group.py  group_join_history.py  lead.py  lead_conversation.py  lead_opportunity.py  lead_profile.py  message.py  message_analysis.py  metrics_snapshot.py  opportunity_cluster.py  persona.py  problem_trend.py  telegram_account.py  ticket.py  user.py
app/schemas/: contact.py  conversation.py  dashboard.py
app/services/: ai_drafting.py  (+23 more)
docs/: schema_and_jobs.md  telegram_support_crm_spec.md
migrations/: env.py
scripts/: check_db_accounts.py  force_join_5.py  join_5_groups.py  list_tables.py  run_migrations.py  sync_env_acc.py  test_neon_conn.py
slie/: __init__.py
streamexpert_support_crm.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_cpu_optimizations.py  test_group_discovery_quality.py  test_health_checks.py  test_render_startup_smoke.py
(+47 files in other folders)
